Anvil fix, some flags, new enchant
+ Added Rejuvenating (Random increase maximum durability, when at 500, repair instead)
+ Added Burden Enervating (Consume extra saturation when using the item)
+ Added Fire Spread region flag
+ Added Fire Burn region flag
+ Added Fire Extinguish region flag
+ Added 7 seconds of Invulnerability when teleporting
+ Added Creative Mode Enchanting Book Power
- Can no longer remove Burdens with an item that isn't fully repaired
- Nerfed Mining XP slightly
* Decrease Forging EXP cost
* Increase the amount of Forging Skill XP earned
* Increase the amount of Enchanting Skill XP earned
* Protect Animals region flag now prevents lightning strikes transforming mobs
* Fixed negative repairing when using a material to repair a tool
* Fixed a rare NullPointerException when crafting an item
* Fixed LoreBuilder not counting shown characters correctly, for real this time
* Creative Mode block breaking no longer records in stats
* Improved BeanCommand#runCommand
* Made PlayerProfile#addCooldown consider cooldown bypass permission
* Utilise the 4 unused bits in the BlockTracker for Y, this will mean all previous placements are redundant on live but that's fine since we are still in Alpha.